--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MiPush配置编辑器</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="mdui-theme-primary-pink mdui-theme-accent-pink mdui-theme-layout-auto">
+    <div class="mdui-appbar">
+      <div class="mdui-toolbar mdui-color-theme">
+        <a href="/" class="mdui-typo-headline">MiPush配置编辑器</a>
+        <div class="mdui-toolbar-spacer"></div>
+      </div>
+    </div>
+    <div class="mdui-container" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
